# escape

./: .dockerignore  .gitignore  .gitmodules  .gitmodules-sb  .gitmodules.5gex  .gitmodules.5gex.development  .gitmodules.5gexchange  .gitmodules.ericsson  .gitmodules.hsnlab  .gitmodules.sb  Dockerfile  Jenkinsfile  Makefile  NOTICE  README  README.md  clear_docker.sh  dataplane.config  docker_startup.sh  dockerize-escape.sh  escape-config.json  escape-config.yaml  escape-dummy-cmd.txt  escape-dummy.config  escape-ext.config  escape-multi-domain.config  escape-nano.config  escape-test.config  escape.config  escape.py  get_config.xml  install-dep.sh  kill-escape.sh  packages.pth  project-setup.sh  python_root_debugger.sh  requirements.txt  set_virtualenv.sh  sg1_connectivity_sap12_e2e_req -transport.nffg  shortest_paths.txt  (+2 more)
bgp-ls/: BGP4Parameters_1_esc.xml  TM1.xml  TM2.xml  TM3.xml  TMConfig_esc.xml  log4j2-debug.xml  log4j2-info.xml  log4j2.xml  network1_esc.xml  receiver-BGP4Parameters_2.xml  receiver-TMConfig_esc.xml  receiver-debug.sh  receiver.sh  setup.sh  speaker-BGP4Parameters_1node.xml  speaker-BGP4Parameters_2nodes.xml  speaker-BGP4Parameters_3nodes.xml  speaker-debug.sh  speaker-network_1node.xml  speaker-network_2nodes.xml  speaker-network_3nodes.xml  speaker.sh  tads.sh  tm.sh
config/: escape-5gex-mdo1-bgpls.config  escape-5gex-mdo1-bgpls.yaml  escape-5gex-mdo1.config  escape-5gex-mdo2.config  escape-5gex-mdo2.yaml  escape-bgp-ls-test.config  escape-bgp-ls-test.yaml  escape-dummy-callbacks.config  (+42 more)
hwloc2nffg/src/: CMakeLists.txt  hwloc2nffg.cpp
(+948 files in other folders)
